[package]
name = "auth-iptables"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
serde = "1.0.163"
sqlx = { version = "0.6.3", features = ["runtime-async-std-native-tls", "postgres"] }
toml = "0.7.4"
